--- a/package.json
+++ b/package.json
@@ -12,11 +12,21 @@
   "author": "",
   "license": "ISC",
   "devDependencies": {
+    "@types/jest": "^26.0.10",
     "@types/node": "^14.6.0",
+    "jest": "^26.4.2",
+    "ts-jest": "^26.2.0",
     "typescript": "^4.0.2"
   },
   "dependencies": {
     "cassandra-driver": "^4.6.0",
     "ts-node": "^9.0.0"
+  },
+  "jest": {
+    "transform": {
+      ".(ts|tsx)": "<rootDir>/node_modules/ts-jest/preprocessor.js"
+    },
+    "testRegex": "(/__tests__/.*|\\.(test|spec))\\.(ts|tsx|js)$",
+    "moduleFileExtensions": ["ts", "tsx", "js"]
   }
 }
